[package]
name = "saelient"
description = "SAE-J1939 support library"
repository = "https://github.com/liamkinne/saelient"
categories = ["no-std", "embedded"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-can = "0.4.1"
