[package]
name = "saelient"
description = "SAE-J1939 support library"
readme = "../README.md"
repository = "https://github.com/liamkinne/saelient"
documentation = "https://docs.rs/saelient"
categories = ["no-std", "embedded"]
version = "0.1.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3.5", optional = true }
embedded-can = "0.4.1"
paste = "1.0.14"

[features]
default = ["float-64"]

float-32 = []
float-64 = []

std = []
defmt = ["dep:defmt"]

[[example]]
name = "slot_format"
required-features = ["std"]
